<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/ask_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/EditText"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/EditText"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process_name"
        android:id="@+id/button"
        android:longClickable="false"
        android:onClick="displayName"
        android:layout_below="@+id/EditText"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:textIsSelectable="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_button"
        android:id="@+id/button2"
        android:longClickable="false"
        android:onClick="displayPic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="100sp"
        android:textIsSelectable="true"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button" />


</RelativeLayout>
